ExoPlayer added to play the video. Might included the PlayerActivity.kt as a separate module suggested by Android developer console. Custom player control view is not working (play, pause not working) . So, left with the default controls.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
     }
 }
 
+def mediaVersion = "1.1.0-beta01"
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -63,5 +64,9 @@ dependencies {
 
     //Kotlin- Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+    //ExoPlayer
+    implementation "androidx.media3:media3-exoplayer:$mediaVersion"
+    implementation "androidx.media3:media3-ui:$mediaVersion"
+    implementation "androidx.media3:media3-exoplayer-dash:$mediaVersion"
 
 }
